--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/material": "^5.11.13",
     "@mui/x-date-pickers": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.3",
@@ -25,7 +26,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.48.2",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
